--- a/index.html
+++ b/index.html
@@ -4,29 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interface Responsiva</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="components.css">
+</head> 
 <body>
     <div class="wrapper">
         <header>
-            <h1>Decodificador</h1>
-        </header>
-
-        <div class="sidebar">
             <ul>
                 <li>
-                    <a href="#" class="menu-item" data-page="home">Decodificador (2:4)</a>
-                </li>
-                <li>
-                    <a href="#" class="menu-item" data-page="about">Decodificador (3:8)</a>
+                    <a href="#" class="menu-item-header" data-page="decodificador">Decodificador</a>
                 </li>
             </ul>
-        </div>
+        </header>
 
-        <div class="main-content">
-            <div class="content" id="content">
-                <h2>Bem-vindo à Página Inicial</h2>
-                <p>Conteúdo da página inicial.</p>
+        <div style="display: flex; flex-direction: row;">
+            <div style="display: flex; flex-direction: column;">
+                <div class="sidebar">
+                    <ul>
+                        <li>
+                            <a href="#" class="menu-item" data-page="decodificador2x4">Decodificador (2:4)</a>
+                        </li>
+                        <li>
+                            <a href="#" class="menu-item" data-page="decodificador3x8">Decodificador (3:8)</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="sidebar-bottom">
+                    <div class="line"></div>
+                    <h4>Tipos de Demux</h6>
+                </div>
+            </div>
+
+            <div class="main-content">
+                <div class="content" id="content">
+                    <h2>Bem-vindo à Página Inicial</h2>
+                    <p>Conteúdo da página inicial.</p>
+                </div>
             </div>
         </div>
     </div>
