--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
         </header>
 
-        <div style="display: flex; flex-direction: row;">
+        <div class="principal-container">
             <div style="display: flex; flex-direction: column;">
                 <div class="sidebar">
                     <ul>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="sidebar-bottom">
                     <div class="line"></div>
-                    <h4>Tipos de Demux</h6>
+                    <h4 style="display: flex; margin-bottom: 10px;">Tipos de Demux</h6>
                 </div>
             </div>
 
