--- a/Decodificadores/Decodificador_2_4_enable/index.html
+++ b/Decodificadores/Decodificador_2_4_enable/index.html
@@ -3,31 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Decodificador 2 para 4 com Portas Lógicas</title>
+    <title>Decodificador 2 para 4 com Enable</title>
     <link rel="stylesheet" href="./styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Decodificador 2 para 4 com Portas Lógicas</h1>
+        <h1>Decodificador 2 para 4 com Enable</h1>
         
         <div class="input_Output">
             <!-- Entradas -->
             <div class="inputs">
                 <button id="inputA">A: 0</button>
                 <button id="inputB">B: 0</button>
+            </div>
 
-
+            <!-- Imagem da saída do circuito -->
+            <div class="circuit-output">
+                <div class="inputE">
+                    <button id="inputE">E: 0</button>
+                </div>
+                <img id="circuitImage" src="images/saida_00_disable.png" alt="Circuito Lógico">
             </div>
 
             <!-- Saídas (Luzes) -->
-                <div class="outputs">
+            <div class="outputs">
                 <div class="light" id="S0">S0</div>
                 <div class="light" id="S1">S1</div>
                 <div class="light" id="S2">S2</div>
                 <div class="light" id="S3">S3</div>
             </div>
-
         </div>
-    
     </div>
-    <script src="script 1.js"></script>
+</body>
+</html>
