alterando o conteudo das pages

--- a/Decodificadores/Decodificador_2_4/index.html
+++ b/Decodificadores/Decodificador_2_4/index.html
@@ -9,8 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Decodificador 2 para 4 com Portas Lógicas</h1>
-        
+        <div>
+             <h1>Decodificador 2 para 4 com Portas Lógicas</h1>
+                <p style='color: #333; font-size: 18px;'>O decodificador <b>2 para 4</b> recebe <b>dois bits</b> de entrada e ativa uma das <b>quatro saídas</b> possíveis. 
+                    Ele é utilizado em circuitos eletrônicos para ativar diferentes componentes com base em combinações binárias.
+                </p>
+        </div>
+       
         <div class="input_Output">
             <!-- Entradas -->
             <div class="inputs">
