--- a/Decodificadores/Decodificador_2_4_enable/index.html
+++ b/Decodificadores/Decodificador_2_4_enable/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Decodificador 2 para 4 com Enable</h1>
+        <div>
+            <h1>Decodificador 2 para 4 com Enable</h1>
+            <p style='color: #333; font-size: 18px;'>Este decodificador inclui um terceiro sinal chamado <b>Enable (E)</b>. Quando E está desativado, 
+                todas as saídas ficam desligadas, proporcionando maior controle sobre o circuito.
+            </p>
+        </div>
+        
         
         <div class="input_Output">
             <!-- Entradas -->
