--- a/Decodificadores/Decodificador_3_8_enable/index.html
+++ b/Decodificadores/Decodificador_3_8_enable/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Decodificador 3 para 8 com Enable</h1>
+        <div>
+            <h1>Decodificador 3 para 8 com Enable</h1>
+            <p style='color: #333; font-size: 18px;'>Esse modelo funciona como o decodificador 3 para 8, mas inclui um <b>Enable (E)</b> para ativação/desativação. 
+                Isso permite maior flexibilidade no controle de circuitos digitais.</p>
+        </div>
+        
         
         <div class="input_Output">
             <div class="inputs">
