--- a/Decodificadores/Decodificador_2_4/index.html
+++ b/Decodificadores/Decodificador_2_4/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
     <script defer src="script.js"></script>
 </head>
-<body>
+<body onload="updateCircuit()">
     <div class="container">
         <div>
              <h1>Decodificador 2 para 4 com Portas Lógicas</h1>
@@ -38,6 +38,6 @@
                 <div class="light" id="S3">S3</div>
             </div>
         </div>
-    
     </div>
-    
+</body>
+</html>
