--- a/Decodificadores/Decodificador_2_4_enable/index.html
+++ b/Decodificadores/Decodificador_2_4_enable/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
     <script defer src="script.js"></script>
 </head>
-<body>
+<body onload="updateCircuit()">
     <div class="container">
         <div>
             <h1>Decodificador 2 para 4 com Enable</h1>
