--- a/Decodificadores/Decodificador_3_8/index.html
+++ b/Decodificadores/Decodificador_3_8/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
     <script defer src="script.js"></script>
 </head>
-<body>
+<body onload="updateCircuit()">
     <div class="container">
         <div>
             <h1>Decodificador 3 para 8 com Portas Lógicas</h1>
